--- a/pages/1894_02_13.md
+++ b/pages/1894_02_13.md
@@ -13,7 +13,7 @@ Before beginning the exercises of the programme, the President announced that we
 as a Club nearly four years ago. She spoke of some other Woman’s Club[s], especially of the Sorosis of New York,--which is, however, not strictly literary. It grew she said, out of the feeling aroused by the refusal to admit women, however distinguished, to a dinner given to Charles Dickens, when he was in New York. Upon this, Jennie June and Fanny Fern and others concluded that the women of New York ought to have a Club of their own, in our time. The Brooklyn Woman's Club was, she told us, really a literary club, though it is by no means a narrow or limited one in its aim or management. It has been said of this Brooklyn Club, that a mother who wishes her daughter to join it, ought to give in the name of her child as soon as it is born, and perhaps, when the infant becomes a woman, there may be a vacancy ready in her admission to membership.
 
 Mrs. Richardson said that she believed that we would go on with no limited aims, but with broad culture taking in all great subjects and still remaining a Woman's Literary Club. She had heard of the formation of another association by some of the former members of our own Club, whose work may be on somewhat different lines from ours.[^Arundell] Of course there is regret in parting company, but there need be no rivalry, nor anything but good feeling between the two bodies. We know that the Sorosis and the Nineteenth Century Club are very different from each other, but that does not prevent the holding of membership in both of them at the same time. She could hope, she said that both of the Baltimore Woman's Literary Clubs might continue and succeed.
-[^Arundell]: The Arundell Club was formed in early 1894, possibly organized by Mrs. William Woolsey Johnson. Their constitution seems largely based on the WLCB's. See this blog post https://thelifeofanangloamerican.blogspot.com/2021/03/clubbical-baltimore-of-days-gone-by.html?showComment=1650894462885#c1188529904321056430.
+[^Arundell]: The Arundell Club was formed in early 1894, possibly organized by Mrs. William Woolsey Johnson. Their constitution seems largely based on the WLCB's. See this [blog post] (https://thelifeofanangloamerican.blogspot.com/2021/03/clubbical-baltimore-of-days-gone-by.html?showComment=1650894462885#c1188529904321056430).
 
 [58]
 
