--- a/pages/1894_04_17.md
+++ b/pages/1894_04_17.md
@@ -30,7 +30,7 @@ The next article on our programme was by Mrs. Mary G. Welles, Instructor in Gree
 In speaking of the alleged tendency of Democracy to vulgarity he dwelt upon the responsibility of preserving the refinement of our nation which rests chiefly upon its young women,--with their power over the hearts and souls of all around them.
 
 The last article on our programme was by Mrs. Elizabeth Brown Davis, who is taking a course of mathematics at the Johns Hopkins University, and is also making calculations for the Government's Natural Almanac. The subject of Mrs. Davis's article was "A Few Women at the University." She began by reminding us that the time is past when a woman was expected to "eat strawberries and cream, and sit on a cushion, and sew up a seam." She referred to the opinion of Curtis that there is a waste of reserved power when cultivation is given to the mind of one sex only. And to that of Sidney Smith, that nature has been as bountiful in the matter of intelligence to one sex as to the other. Mrs. Davis spoke of the College for Women; Vassar, Smith, Wellesley, etc., and of the Colleges in which women have been admitted as students. She thought it would be eminently desirable for the Johns Hopkins University, which has taken rank with the Universities of Germany,--to open its doors to women as well as to men. So far, only the Medical School of the University has done so. And this has been brought about by the Endowment Fund of Miss Garrett,[^JHU] and of other women working with her. Women have,--a few of them, studied at the Johns Hopkins University, and a few are doing so now, but for the most part without full recognition
-[^JHU]: Mary Elizabeth Garrett (1854-1915) was the daughter of B&O Railroad president John Work Garrett. In 1890, with several education-minded friends, she established the Women's Medical Fund that enabled the founding of the medical school at Johns Hopkins University provided "the trustees agreed to admit women on the same terms as men." Christine Ladd-Franklin, as mentioned later in the paragraph, attended graduate courses at Johns Hopkins and completed coursework for a doctorate in mathematics (conferred by the College of Arts and Sciences rather than the medical school). She did not receive her degree until 1929, 44 years after she completed degree requirements. Celebrating the Philanthropy of Mary Elizabeth Garrett,  https://exhibits.library.jhu.edu/exhibits/show/celebrating-the-philanthropy-o/the-women-s-medical-school-fun 
+[^JHU]: Mary Elizabeth Garrett (1854-1915) was the daughter of B&O Railroad president John Work Garrett. In 1890, with several education-minded friends, she established the Women's Medical Fund that enabled the founding of the medical school at Johns Hopkins University provided "the trustees agreed to admit women on the same terms as men." Christine Ladd-Franklin, as mentioned later in the paragraph, attended graduate courses at Johns Hopkins and completed coursework for a doctorate in mathematics (conferred by the College of Arts and Sciences rather than the medical school). She did not receive her degree until 1929, 44 years after she completed degree requirements. [Celebrating the Philanthropy of Mary Elizabeth Garrett] (https://exhibits.library.jhu.edu/exhibits/show/celebrating-the-philanthropy-o/the-women-s-medical-school-fun)
 
 [120]
 
