--- a/pages/1894_05_08.md
+++ b/pages/1894_05_08.md
@@ -37,7 +37,7 @@ silver, and the Duke of Anjou had one worth much gold. The use of spoons was, we
 clasps of old missals, in pairs with carved heads of saints upon them; having also little pendant silver tassels from the corner of those books of devotion of our ancestry, or their contemporaries.
 
 The next article on our programme was by Mrs. [Elizabeth Turner] Graham, and was given as two poems: “Becalmed[“] and “Purple Horrors.” In the first she described to us her own conception of Art at the present day, as a beautiful ship lying becalmed on a silent sea, waiting for the winds from heaven to stir the waters, or for the breathings of inspiration to fill the sails. Mrs. Graham then describes with wit and vivacity a visit she had made to an Exhibition of Water-Color pictures in New York, and the Purple Horrors she recounted there from the modern rage for heliotrope and violet and all the shades we have been accustomed to call purple. It was suggested that a picture ought to tell you something; also that the royal purple was not meant for a landscape, for landscapes with no sky in them. Mrs. Graham quoted the opinion of an artist that we may have a language, but nothing to say in it. She spoke with admiration however of a picture by [Abbott Handerson] Thayer, called A Virgin Enthroned [1891], representing his sister who is adored by his children;--a subject that would appeal to all of us.[^Virgin]
-[^Virgin]: Thayer's _Virgin Enthroned_ is held in the Smithsonian American Art Museum. https://americanart.si.edu/artwork/virgin-enthroned-23957
+[^Virgin]: Thayer's [_Virgin Enthroned_] (https://americanart.si.edu/artwork/virgin-enthroned-23957) is held in the Smithsonian American Art Museum. 
 
 The next article on our programme was on “Art and its Compensation,” by Miss Lucy Comins. Before reading, Miss Comins spoke of her own visit to an Exhibition of Water Colors; and described what
 
