--- a/pages/1893_10_23_BOM.md
+++ b/pages/1893_10_23_BOM.md
@@ -2,10 +2,9 @@
 
 [40]
 
-
 ### Board of Management Meeting [Oct. 23, 1893]
 
-The Board of Management of the Woman's Literary Club of Baltimore met on Monday October 23rd, 1893, at the corner of Franklin and Cathedral Streets. There were six members present;--the President, First Vice President,--Second Vice President, Recording Secretary,--Corresponding Secretary, and Miss Brown.
+The Board of Management of the Woman's Literary Club of Baltimore met on Monday October 23rd, 1893, at the corner of Franklin and Cathedral Streets. There were six members present;--the President [Emma Fenwick Brent], First Vice President [Elizabeth T. King],--Second Vice President [Louisa Courtauld Osburne Haughton], Recording Secretary [Lydia Crane],--Corresponding Secretary [Annie S. Perot], and Miss [Mary Wilcox] Brown.
 
 The President called the meeting to order, and informed us that we had been called together to consider the question of the proposed Amendments to the Constitution of the Club. This question had been discussed last Spring, and had been deferred until the present time.
 
@@ -27,7 +26,7 @@ dent.--To be sent to the Secretary before Saturday October 28th.
 
 "The votes will be made by written ballot,--a two-thirds vote, of course, being necessary for any Amendment of the Constitution."
 
-A discussion followed the reading of the first resolution; and Miss King offered--verbally--a substitute for it, as follows:*[^note]  "A Committee on Revision of the Constitution shall be formed, to
+A discussion followed the reading of the first resolution; and Miss [Elizabeth T.] King offered--verbally--a substitute for it, as follows:[^note]  "A Committee on Revision of the Constitution shall be formed, to
 [^note]: Crane's note: "According to the notes and recollection of the Recording Secretary. L. C."
 
 [42]
