--- a/pages/1894_01_02_BOM.md
+++ b/pages/1894_01_02_BOM.md
@@ -4,9 +4,9 @@
 
 ### Board of Management Meeting. January 2nd, 1894. 
 
-The Board of Management of the Woman's Literary Club of Baltimore met on Tuesday, January 2nd, 1894, at the corner of Cathedral and Franklin Streets. Ten members attended this meeting,--the President, Second Vice President,--two Secretaries,--Treasurer,--Mrs. Johnson,--Mrs. Lord,--Mrs. Dammann,--Miss Bennett,--and Miss Grace. The President announced that this was the regular meeting for the reception of the names of proposed new members,--other business being in order afterwards.
+The Board of Management of the Woman's Literary Club of Baltimore met on Tuesday, January 2nd, 1894, at the corner of Cathedral and Franklin Streets. Ten members attended this meeting,--the President [Emma Fenwick Brent], Second Vice President [Louisa Courtauld Osburne Haughton],--two Secretaries [Lydia Crane and Annie S. Perot],--Treasurer [Caroline Canfield Bullock],--Mrs. [W. Woolsey] Johnson,--Mrs. [Alice Emma Sauerwein] Lord,--Mrs. [Aileen B. C.] Dammann,--Miss [Sarah H.] Bennett,--and Miss [Mary F.] Grace. The President announced that this was the regular meeting for the reception of the names of proposed new members,--other business being in order afterwards.
 
-The name of Mrs. Remsen, 12 East Riddle Street, proposed by Mrs. Goddard, and seconded by Miss Balch, was read. The second name read was that of Miss Ellen Duvall, proposed by Miss Balch, and seconded by Miss [Mary E.] Evans. Miss [Ellen] Duvall's name, we were told, had received favorable action two years ago. Miss Kate Mason Rowland was proposed by Mrs. Dammann, and seconded by Miss Crane. These three ladies were unanimously elected.
+The name of Mrs. Remsen, 12 East Riddle Street, proposed by Mrs. Goddard, and seconded by Miss Balch, was read. The second name read was that of Miss Ellen Duvall, proposed by Miss Balch, and seconded by Miss [Mary E.] Evans. Miss Duvall's name, we were told, had received favorable action two years ago. Miss Kate Mason Rowland was proposed by Mrs. Dammann, and seconded by Miss Crane. These three ladies were unanimously elected.
 
 Miss [Lizette Woodworth] Reese, an honorary member, was proposed for regular membership; and the proposal was accepted without opposition.
 
