--- a/pages/1894_01_22_BOM.md
+++ b/pages/1894_01_22_BOM.md
@@ -4,7 +4,7 @@
 
 ### Board of Management. January 22nd, 1894. 
 
-The Board of Management of the Woman's Literary Club of Baltimore met on Monday, January 22nd, 1894, at the corner of Cathedral and Franklin Streets. Seven members attended this meeting,--the President,--Recording Secretary,--Treasurer,--Mrs. Dammann,--Miss Balch,--Mrs. Early,--and Mrs. Lord.--The Recording Secretary read the minutes of the former meeting on January 16th.
+The Board of Management of the Woman's Literary Club of Baltimore met on Monday, January 22nd, 1894, at the corner of Cathedral and Franklin Streets. Seven members attended this meeting,--the President [Emma Fenwick Brent],--Recording Secretary [Lydia Crane],--Treasurer [Caroline Canfield Bullock],--Mrs. [Aileen B. C] Dammann,--Miss [Grace] Balch,--Mrs. [Maud Graham] Early,--and Mrs. [Alice Emma Sauerwein] Lord.--The Recording Secretary read the minutes of the former meeting on January 16th.
 
 The President announced that Miss Kate Mason Rowland had informed us that she would not be able to become an active memebr of the CLub, as much of her time was now spent in Washington; but that she would accept non-
 
