--- a/pages/1894_01_25_BOM.md
+++ b/pages/1894_01_25_BOM.md
@@ -5,13 +5,13 @@
 
 ### Board of Management. January 25th, 1894.
 
-The Board of Management of the Woman's Literary Club of Baltimore met on Friday, January 25th, 1894 at the corner of Cathedral and Franklin Streets. There were five members present:--the President,--Recording Secretary,--Miss Grace,--Mrs. Dammann and Miss Balch.
+The Board of Management of the Woman's Literary Club of Baltimore met on Friday, January 25th, 1894 at the corner of Cathedral and Franklin Streets. There were five members present:--the President [Emma Fenwick Brent],--Recording Secretary [Lydia Crane],--Miss [Mary F.] Grace,--Mrs. [Aileen B. C.] Dammann and Miss [Grace] Balch.
 
 Letters were received from Mrs.
 
 [59]
 
-Whitelock, Mrs. [Alice Emma Sauerwein] Lord and Miss Haughton regretting their inability to be present.
+[Louise Clarkson] Whitelock, Mrs. [Alice Emma Sauerwein] Lord and Miss [Louisa Courtauld Osburne] Haughton regretting their inability to be present.
 
 The minutes of the Board meeting of January 22nd were read.
 
