--- a/pages/1894_02_27_BOM.md
+++ b/pages/1894_02_27_BOM.md
@@ -2,7 +2,7 @@
 
 ## Board of Management. February 27th, 1894.
 
-The Board of Management of the Woman's Literary Club of Baltimore met on Tuesday, February 27th, 1894, at the corner of Cathedral and Franklin Streets. Ten members attended this meeting,--the President,--two Vice Presidents, Recording Secretary,--Treasurer,--Mrs. Lord,--Miss Grace,--Mrs. Balch,--Mrs. Early,--and Mrs. Wrenshall.
+The Board of Management of the Woman's Literary Club of Baltimore met on Tuesday, February 27th, 1894, at the corner of Cathedral and Franklin Streets. Ten members attended this meeting,--the President [Emma Fenwick Brent],--two Vice Presidents [Mrs. W. Woolsey Johnson and Louisa Courtauld Osburne Haughton], Recording Secretary [Lily Tyson Manly],--Treasurer [Caroline Canfield Bullock],--Mrs. [Alice Emma Sauerwein] Lord,--Miss [Mary F.] Grace,--Miss [Grace] Balch,--Mrs. [Maud Graham] Early,--and Mrs. [Letitia Humphreys Yonge] Wrenshall.
 
 The question of increasing the membership of the Club at this time was discussed; and the names of several ladies were mentioned as likely to be proposed to us.
 
