--- a/pages/1894_03_06_BOM.md
+++ b/pages/1894_03_06_BOM.md
@@ -2,11 +2,11 @@
 
 ### Board of Management. March 6th, 1894.
 
-The Board of Management of the Woman's Literary Club of Baltimore met on Tuesday, March 6th, 1894, at the corner of Cathedral and Franklin Streets. Nine members attended this meeting:--the President,--Second Vice President,--Recording
+The Board of Management of the Woman's Literary Club of Baltimore met on Tuesday, March 6th, 1894, at the corner of Cathedral and Franklin Streets. Nine members attended this meeting:--the President [Emma Fenwick Brent],--Second Vice President [Louisa Courtauld Osburne Haughton],--Recording
 
 [65]
 
-Secretary,--Treasurer,--Miss Grace,--Mrs. Lord,--Miss Balch,--Mrs. Early,--and Mrs. Wrenshall.
+Secretary [Lydia Crane],--Treasurer [Caroline Canfield Bullock],--Miss [Mary F.] Grace,--Mrs. [Alice Emma Sauerwein] Lord,--Miss [Grace] Balch,--Mrs. [Maud Graham] Early,--and Mrs. [Letitia Humphreys Yonge] Wrenshall.
 
 The President announced that we had met expecting to consider Mrs. Johnson's resolution, proposed at the meeting of February 27th, with regard to the sending to the Board of Management the names of proposed new members of the Club a month before the day appointed to the voting upon such names. The question had arisen whether this resolution should become a part of our Constitution?--or should be added to our By Laws? The impression had been received that Mrs. Johnson intended to take legal advise on this subject.
 
