--- a/pages/1894_03_27_BOM.md
+++ b/pages/1894_03_27_BOM.md
@@ -6,11 +6,11 @@
 
 The full Board of Directors--under the new Incorporation--of the Woman's Literary Club of Baltimore,--being the twelve members of the Board of Management under the old Constitution of the Club,--met on Tuesday Morning, March 27th,1894, at the corner of Cathedral and Franklin Streets.
 
-Miss Brent the Chairman called the meeting to order.
+Miss [Emma Fenwick] Brent the Chairman called the meeting to order.
 
 The Chairman laid before the Board a proposition to join the Federation of Woman's Clubs of America. She read a letter from Mrs. Emerson Brown of New Jersey, the President of the Federation, and also a printed circular giving the conditions of joining, and the advantages of belonging to the Federation. It was moved and seconded that the Club should join the Federation, and the motion was carried without opposition. Miss Brent agreed to write to Mrs. Brown on this subject without delay.
 
-The subject of the [?late[ Incorporation of the Club being in order, our own copy of the Act of Incorporation, only signed and attested, was laid before us; and
+The subject of the [?late] Incorporation of the Club being in order, our own copy of the Act of Incorporation, only signed and attested, was laid before us; and
 
 [68]
 
