--- a/pages/1894_04_27_BOM.md
+++ b/pages/1894_04_27_BOM.md
@@ -2,7 +2,7 @@
 
 ### Board of Management. April 27th, 1894.### 
 
-The Board of Management of the Woman's Literary Club of Baltimore met on Friday, April 27th, 1894, at the corner of Franklin and Cathedral Streets. Seven members attended this meeting;--the President, First and Second Vice Presidents, Recording Secretary, Mrs. Early, Miss Balch, and Mrs. Lord.
+The Board of Management of the Woman's Literary Club of Baltimore met on Friday, April 27th, 1894, at the corner of Franklin and Cathedral Streets. Seven members attended this meeting;--the President [Emma Fenwick Brent], First and Second Vice Presidents [Mrs. W. Woolsey Johnson and Louisa Courtauld Osburne Haughton], Recording Secretary [Lydia Crane], Mrs. [Maud Graham] Early, Miss [Grace] Balch, and Mrs. [Alice Emma Sauerwein] Lord.
 
 The names of nineteen candidates for membership in the Club were presented to the Board, and three others mentioned as those of probable or possible candidates.
 
@@ -18,4 +18,3 @@ The Recording Secretary asked leave to make a personal request from the Board. S
 After some informal consultation, the meeting adjourned.
 
 Adopted.
-<hr>
