--- a/pages/1894_05_01_BOM.md
+++ b/pages/1894_05_01_BOM.md
@@ -4,7 +4,7 @@
 
 ### Board of Management. May 1st, 1894.
 
-The Board of Management of the Woman's Literary Club of Baltimore held a meeting on Tuesday, May 1st, 1894, at the corner of Cathedral and Franklin Streets. In all nine members attended this meeting; the President,--two Vice Presidents,--Recording Secretary,--Treasurer,--Mrs. Lord,--Miss Grace,--Miss Balch,--and Mrs. Wrenshall. Miss Grace came late.
+The Board of Management of the Woman's Literary Club of Baltimore held a meeting on Tuesday, May 1st, 1894, at the corner of Cathedral and Franklin Streets. In all nine members attended this meeting; the President [Emma Fenwick Brent],--two Vice Presidents[Mrs. W. Woolsey Johnson and Louisa Courtauld Osburne Haughton],--Recording Secretary [Lydia Crane],--Treasurer [Caroline Canfield Bullock],--Mrs. [Alice Emma Sauerwein] Lord,--Miss [Mary F.] Grace,--Miss [Grace] Balch,--and Mrs. [Letitia Humphreys Yonge] Wrenshall. Miss Grace came late.
 
 The President called the meeting to order, and after some suggestions with regard to the conduct of business,--reminded us that the first business in order was the presentation of the names of candidates for membership in our Club, this being the occasion of voting upon them.
 
