--- a/pages/1894_06_01_BOM.md
+++ b/pages/1894_06_01_BOM.md
@@ -2,9 +2,9 @@
 
 ### Board of Management. June 1st, 1894.### 
 
-The Board of Management of the Woman's Literary Club of Baltimore met on Friday afternoon, June 1st, 1894 at the corner of Cathedral and Franklin Streets. Ten members were present; the Second Vice President,--two Secretaries, Treasurer, (Mrs. Bullock)--Miss Grace,--Mrs. Lord,--Mrs. Dammann,--Mrs. Wrenshall,--Mrs. Early,--and Mrs. Manly.
+The Board of Management of the Woman's Literary Club of Baltimore met on Friday afternoon, June 1st, 1894 at the corner of Cathedral and Franklin Streets. Ten members were present; the Second Vice President [Louisa Courtauld Osburne Haughton],--two Secretaries [Lydia Crane and Lily Tyson Manly], Treasurer, (Mrs. [Caroline Canfield] Bullock)--Miss [Mary F.] Grace,--Mrs. [Alice Emma Sauerwein] Lord,--Mrs. [Aileen B. C.] Dammann,--Mrs. [Letitia Humphreys Yonge] Wrenshall,--Mrs. [Maud Graham] Early,--and Mrs. Manly.
 
-The President, Mrs. Brent, sent a note, telling us that to her great regret, she was prevented by severe indisposition from giving us some short explanations regarding the business before us, and her views respecting it.
+The President, Miss Brent, sent a note, telling us that to her great regret, she was prevented by severe indisposition from giving us some short explanations regarding the business before us, and her views respecting it.
 
 Mrs. Wrenshall read the Election Rules used in the late election by the Club; and noted a few changes necessary apparently to be made in acting upon them. She offered, and
 
@@ -23,4 +23,3 @@ That candidates shall be immediately notified of their nominations.
 After some discussion the Rules, as amended, were put to the vote, and carried by the Board of Management, to be submitted to the Club as among our proposed By Laws.
 
 The question of a Committee on Hospitality to invite distinguished strangers and others to our meetings received informal discussion. Also, the question of limiting the number of members in the Club.--The meeting adjourned.
-<hr>
