--- a/pages/1893_09_26_BOM.md
+++ b/pages/1893_09_26_BOM.md
@@ -46,5 +46,4 @@ been made for a Photograph of our Club in its meeting room on a social evening; 
 
 The Recording Secretary proposed that the invitations to visitors should be issued by either of the two Secretaries, without having to be sent back and forth, in submitting them to a Committee on Invitations. The proposition was agreed to;--and so ordered by the President. The Secretary also spoke of limiting the number of invitations given more strictly,--but this subject was deferred.
 
-The question of making Mrs. R. W. Latimer an Honorary Member of the Club was discussed; also, whether it could be done at this time. The Article of the Constitution "On New Members" was read to us; but we were reminded that Mrs. Latimer was not a new member; also that there was a precedent for the appointing of honorary members by the Board of Management, without waiting for the election of new members. The motion to make Mrs. Latimer an honorary member was made by Miss Crane, and seconded by Miss Haughton; and carried without opposition. The meeting adjourned.
-<hr>
+The question of making Mrs. R. W. [Elizabeth Wormeley] Latimer an Honorary Member of the Club was discussed; also, whether it could be done at this time. The Article of the Constitution "On New Members" was read to us; but we were reminded that Mrs. Latimer was not a new member; also that there was a precedent for the appointing of honorary members by the Board of Management, without waiting for the election of new members. The motion to make Mrs. Latimer an honorary member was made by Miss Crane, and seconded by Miss Haughton; and carried without opposition. The meeting adjourned.
