--- a/pages/1893_10_31_BOM.md
+++ b/pages/1893_10_31_BOM.md
@@ -4,7 +4,7 @@
 
 ###   Board of Management. October 31st, 1893.
 
-The Board of Management of the Woman's Literary Club of Baltimore met on Tuesday, October 31st, 1893, at the corner of Cathedral and Franklin Streets. There were ten members present,--the President,--Second Vice President,--two Secretaries, (Miss Perot and Miss Crane,)--Treasurer,--Mrs. Johnson,--Mrs. Dammann,--Mrs. Lord,--Miss Grace,--and Miss Brown.
+The Board of Management of the Woman's Literary Club of Baltimore met on Tuesday, October 31st, 1893, at the corner of Cathedral and Franklin Streets. There were ten members present,--the President [Emma Fenwick Brent],--Second Vice President [Louisa Courtauld Osburne Haughton],--two Secretaries, (Miss [Annie S.] Perot and Miss [Lydia] Crane,)--Treasurer [Caroline Canfield Bullock],--Mrs. [W. Woolsey] Johnson,--Mrs. [Aileen B. C.] Dammann,--Mrs. [Alice Emma Sauerwein] Lord,--Miss [Mary F.] Grace,--and Miss [Mary Wilcox] Brown.
 
 The President called the meeting to order.
 
@@ -29,4 +29,3 @@ The question of electing a member of the Board of Management to fill the vacancy
 Some conversation followed on the question of defining the duties of the House Committee.
 
 The President called a meeting of the Board for the next Tuesday, November 7th. The meeting adjourned.
-<hr>
