--- a/pages/1893_11_07_BOM.md
+++ b/pages/1893_11_07_BOM.md
@@ -4,11 +4,11 @@
 
 ### Board of Management. November 7th, 1893. 
 
-The Board of Management of the Woman's Literary Club of Baltimore met on Tuesday, November 7th, 1893, at the corner of Cathedral and Franklin Streets. There were ten members present at this meeting;--the President,--Second Vice President,
+The Board of Management of the Woman's Literary Club of Baltimore met on Tuesday, November 7th, 1893, at the corner of Cathedral and Franklin Streets. There were ten members present at this meeting;--the President [Emma Fenwick Brent],--Second Vice President [Louisa Courtauld Osburne Haughton],
 
 [46]
 
-two Secretaries,--Treasurer,--Mrs. Lord, Mrs. Johnson,--Mrs. Dammann,--Miss Brown,--and Miss [Sarah H.] Bennett.
+two Secretaries [Lydia Crane and Annie S. Perot],--Treasurer [Caroline Canfield Bullock],--Mrs. [Alice Emma Sauerwein] Lord, Mrs. [W. Woolsey] Johnson,--Mrs. [Aileen B. C.] Dammann,--Miss [Mary Wilcox] Brown,--and Miss [Sarah H.] Bennett.
 
 The President called the meeting to order.
 
@@ -19,4 +19,3 @@ A discussion arose whether this work was properly the work of the Committee. Mis
 A discussion on the sending of printed postal cards to our members, by the Secretary, giving these notices, then followed.
 
 The subject was also brought forward of the notices of our Club in the daily newspapers,--to which great exception has been taken. Some of the members spoke of the great unpleasantness of antagonizing the Press, as well as of the unpleasantness of having our affairs prematurely, and incorrectly, published to the world. No action was taken,--or specially recommended on this subject.--The Board of Management adjourned; as the Executive Committee, acting as the House Committee, was about to hold a meeting.
-<hr>
