--- a/pages/1893_11_28_BOM.md
+++ b/pages/1893_11_28_BOM.md
@@ -4,7 +4,7 @@
 
 ### Board of Management. November 28th, 1893. 
 
-The Board of Management of the Woman's Literary Club of Baltimore met on Tuesday, November 28th, 1893, on the corner of Cathedral and Franklin Streets. There were ten members present;--the President, Miss Brent;--First Vice President, Miss King,--Second Vice President, Miss Haughton,--Recording Secretary, Miss Crane,--Treasurer, Miss Bullock,--Mrs. Lord,--Mrs. Dammann,--Miss Grace,--Miss Bennett,--and Miss Brown.
+The Board of Management of the Woman's Literary Club of Baltimore met on Tuesday, November 28th, 1893, on the corner of Cathedral and Franklin Streets. There were ten members present;--the President, Miss [Emma Fenwick] Brent;--First Vice President, Miss [Elizabeth T.] King,--Second Vice President, Miss [Louisa Courtauld Osburne] Haughton,--Recording Secretary, Miss [Lydia] Crane,--Treasurer, Mrs. [Caroline Canfield] Bullock,--Mrs. [Alice Emma Sauerwein] Lord,--Mrs. [Aileen B. C.] Dammann,--Miss [Mary F.] Grace,--Miss [Sarah H.] Bennett,--and Miss [Mary Wilcox] Brown.
 
 The President called the meeting to order. Questions having been proposed with regard to the powers of the Special Committee on Amendments, particularly one concerning the right of the members of this Committee to suggest and present Amendments, as well as to consider and report them; the President said that the members of the Committee ought certainly to have the right, as members of the Club, to present Amendments for consideration and for decision by the Club.
 
@@ -17,4 +17,3 @@ own members--before the reading of the Amendments to the Club--with the Amendmen
 The questions of a blackboard and of a bulletin board, and of other small expenses were brought forward; and the House Committee was authorized to go beyond in some degree the appropriation of $10.00 made for these purposed. Also 25 cents to a boy for carrying books, and 50 cents for laundry work was appropriated.
 
 The meeting adjourned.
-<hr>
