--- a/pages/1894_01_09_BOM.md
+++ b/pages/1894_01_09_BOM.md
@@ -4,11 +4,11 @@
 
 ### Board of Management. January 9th, 1894.
 
-The Board of Management of the Woman's Literary Club of Baltimore met on Tuesday, January 9th, 1894, at the corner of Cathedral and Franklin Streets. Nine members attended this meeting,--the President,--Second Vice President,--two Sec-
+The Board of Management of the Woman's Literary Club of Baltimore met on Tuesday, January 9th, 1894, at the corner of Cathedral and Franklin Streets. Nine members attended this meeting,--the President [Emma Fenwick Brent],--Second Vice President [Louisa Courtauld Osburne Haughton],--two Sec-
 
 [52]
 
-retaries,--Treasurer,--Mrs. Dammann,--Mrs. Johnson,--Miss Grace,--and Miss Bennett.
+retaries [Lydia Crane and Annie S. Perot],--Treasurer [Caroline Canfield Bullock],--Mrs. [Aileen B. C.] Dammann,--Mrs. [W. Woolsey] Johnson,--Miss [Mary F.] Grace,--and Miss [Sarah H.] Bennett.
 
 The President called the meeting to order, and the Recording Secretary read the minutes of the meeting of January 2nd.
 
@@ -22,7 +22,7 @@ After some discussion on this subject, the President decided that it was out of 
 
 ceeding to the business for which this meeting had been called; namely: the filling of vacancies in the Board of Management.
 
-The first matter in order was the filling of the vacant place caused by the resignation of Miss King as a member of the Board. The name of Mrs. Goddard was proposed, but it was said that she could not serve at present, having a sick child to claim her attention. The names of Mrs. Wrenshall and Mrs. Manly were also suggested, but it was said that they had declined also to serve on the Board.
+The first matter in order was the filling of the vacant place caused by the resignation of Miss King as a member of the Board. The name of Mrs. [Li] Goddard was proposed, but it was said that she could not serve at present, having a sick child to claim her attention. The names of Mrs. Wrenshall and Mrs. Manly were also suggested, but it was said that they had declined also to serve on the Board.
 
 Mrs. Dammann nominated Miss Balch. Miss Haughton seconded the nomination; and it was carried immediately.
 
@@ -35,4 +35,3 @@ The election of a First Vice President was next in order. Mrs. Bullock nominated
 ceived five votes,--and her election was announced.
 
 The meeting adjourned.
-<hr>
