--- a/pages/1894_01_16_BOM.md
+++ b/pages/1894_01_16_BOM.md
@@ -4,7 +4,7 @@
 
 ### Board of Management. January 16th, 1894.
 
-The Board of Management of the Woman's Literary Club of Baltimore met on Tuesday, January 16th, 1894, at the Corner of Cathedral and Franklin Streets. There were nine members present:--the President,--two Vice Presidents,--Recording Secretary,--Treasurer,--Mrs. Dammann,--Miss Grace,--Mrs. Lord and Miss Balch.
+The Board of Management of the Woman's Literary Club of Baltimore met on Tuesday, January 16th, 1894, at the Corner of Cathedral and Franklin Streets. There were nine members present:--the President [Emma Fenwick Brent],--two Vice Presidents [Mrs. W. Woolsey Johnson and Louisa Courtauld Osburne Haughton],--Recording Secretary [Lydia Crane],--Treasurer [Caroline Canfield Bullock],--Mrs. [Aileen B. C.] Dammann,--Miss [Mary F.] Grace,--Mrs. [Alice Emma Sauerwein] Lord and Miss [Grace] Balch.
 
 Declinations to reconsider resignations were received from seceding members. Resignations were received from Miss Ridgely, Miss Nelson, Mrs. Lake, Miss Sally Carter;--and also from Miss Perot,--Corresponding Secretary,--and Miss [Sarah H.] Bennett of the Board of Management. The question of asking those ladies to reconsider their action was discussed. It was agreed that Miss Perat and Miss Bennett might be approached on this subject. It was said that both these ladies were under some
 
