--- a/pages/1894_02_06_BOM.md
+++ b/pages/1894_02_06_BOM.md
@@ -2,11 +2,11 @@
 
 ### Board of Management. February 6th, 1894.
 
-The Board of Management of the Woman's Literary Club of Baltimore met on Tuesday, February 6th, 1894, at the corner of Cathedral and Franklin Streets. This meeting was attended by eight members;--the President,--Second Vice President,--Recording Secretary,--Treasurer,--Mrs. Lord,--Mrs. Dammann,--Miss Balch,--and Mrs. Early.
+The Board of Management of the Woman's Literary Club of Baltimore met on Tuesday, February 6th, 1894, at the corner of Cathedral and Franklin Streets. This meeting was attended by eight members;--the President [Emma Fenwick Brent],--Second Vice President [Louisa Courtauld Osburne Haughton],--Recording Secretary [Lydia Crane],--Treasurer [Caroline Canfield Bullock],--Mrs. [Alice Emma Sauerwein] Lord,--Mrs. [Aileen B. C.] Dammann,--Miss [Grace] Balch,--and Mrs. [Maud Graham] Early.
 
 [61]
 
-The resignation of Mrs. [Louise Clarkson] Whitelock as Corresponding Secretary having been announced,--the first business in order was election to fill this vacancy. Mrs. Gaston Manley was immediately elected Corresponding Secretary of the Club.
+The resignation of Mrs. [Louise Clarkson] Whitelock as Corresponding Secretary having been announced,--the first business in order was election to fill this vacancy. Mrs. Gaston [Lily Tyson] Manly was immediately elected Corresponding Secretary of the Club.
 
 The question was then discussed whether we should have an entertainment, or anything like a general reception this year? The suggestion was made that, if this was done, the former members of the Club should be invited to it. The question of the limitations of invitations, and the very important question of the limitations of our income--heretofore, and at the present time--occupied the attention of the Board for some time. The Treasurer made an informal statement of the present condition of the finances of the Club, and a general estimate of future expenses, no decisive action was taken with regard to the proposed entertainment, though the proposal seemed to meet favorable consideration.
 
